syntax = "proto3";

package microshopping;

option go_package = "./proto;microshopping";

// Current Currency Description
message Money {
  // Currency code e.g. EUR,USD 
  string currency_code = 1;

  // Currency unit
  // ex: if currencyCode is USD, then 1 unit is 1 dollar.
  int64 units = 2;

  // Quantity in nanometer (10^-9) units.
  // The value must be between -9999999999 and +9999999999.
  // If the unit is positive, nanometers must be positive or zero.
  // If the units are zero, nanometers can be positive, zero, or negative.
  // If the unit is negative, the nanometer must be negative or zero.

  // ex: $-1.75 is expressed as Units = -1 and Nano = -75000000.
  int32 nanos = 3;
}

// --------------Payment service-----------------

// Payment interface
service PaymentService {
  rpc Charge(ChargeRequest) returns (ChargeResponse) {}
}

message CreditCardInfo {
  string credit_card_number = 1;
  int32 credit_card_cvv = 2;
  int32 credit_card_expiration_year = 3;
  int32 credit_card_expiration_month = 4;
}

message ChargeRequest {
  Money amount = 1;
  CreditCardInfo credit_card = 2;
}
message ChargeResponse { string transaction_id = 1; }
