syntax = "proto3";

package microshopping;

option go_package = "./proto;microshopping";

message CartItem {
  string product_id = 1;
  int32 quantity = 2;
}

// Current Currency Description
message Money {
  // Currency code e.g. EUR,USD 
  string currency_code = 1;

  // Currency unit
  // ex: if currencyCode is USD, then 1 unit is 1 dollar.
  int64 units = 2;

  // Quantity in nanometer (10^-9) units.
  // The value must be between -9999999999 and +9999999999.
  // If the unit is positive, nanometers must be positive or zero.
  // If the units are zero, nanometers can be positive, zero, or negative.
  // If the unit is negative, the nanometer must be negative or zero.

  // ex: $-1.75 is expressed as Units = -1 and Nano = -75000000.
  int32 nanos = 3;
}

// ---------------Shipping Service----------
// Interface
service ShippingService {
  rpc GetQuote(GetQuoteRequest) returns (GetQuoteResponse) {}
  rpc ShipOrder(ShipOrderRequest) returns (ShipOrderResponse) {}
}

message GetQuoteRequest {
  Address address = 1;
  repeated CartItem items = 2;
}

message GetQuoteResponse { Money cost_usd = 1; }

message ShipOrderRequest {
  Address address = 1;
  repeated CartItem items = 2;
}

message ShipOrderResponse { string tracking_id = 1; }

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  int32 zip_code = 5;
}
